# clan_samples

./: .gitignore  CMakeLists.txt  README.md
app/: CMakeLists.txt  main.cpp
app/apps/: CMakeLists.txt  apps.cpp.in  apps.h
app/plugins/: CMakeLists.txt  plugins.cpp.in  plugins.h
app/plugins/start_sample/: start_sample.cpp  start_sample.h
bldsys/cmake/: create_gradle_project.cmake  create_sample_project.cmake  global_options.cmake  sample_helper.cmake  utils.cmake
framework/: CMakeLists.txt  buffer_pool.cpp  buffer_pool.h  clan_sample.cpp  clan_sample.h  debug_info.cpp  debug_info.h  fence_pool.cpp  fence_pool.h  glsl_compiler.cpp  glsl_compiler.h  gltf_loader.cpp  gltf_loader.h  gui.cpp  gui.h  resource_binding_state.cpp  resource_binding_state.h  resource_cache.cpp  resource_cache.h  resource_record.cpp  resource_record.h  resource_replay.cpp  resource_replay.h  semaphore_pool.cpp  semaphore_pool.h  spirv_reflection.cpp  spirv_reflection.h  test.cpp  test.hpp  timer.cpp  timer.h
framework/common/: error.cpp  error.h  helpers.h  logging.h  resource_caching.h  strings.cpp  strings.h  tags.cpp  tags.h  utils.cpp  utils.h  vk_common.cpp  vk_common.h  vk_initializers.h
framework/core/: buffer.cpp  buffer.h  command_buffer.cpp  command_buffer.h  command_pool.cpp  command_pool.h  debug.cpp  debug.h  descriptor_pool.cpp  descriptor_pool.h  descriptor_set.cpp  descriptor_set.h  descriptor_set_layout.cpp  descriptor_set_layout.h  device.cpp  device.h  framebuffer.cpp  framebuffer.h  image.cpp  image.h  image_view.cpp  image_view.h  instance.cpp  instance.h  physical_device.cpp  physical_device.h  pipeline.cpp  pipeline.h  pipeline_layout.cpp  pipeline_layout.h  query_pool.cpp  query_pool.h  queue.cpp  queue.h  render_pass.cpp  render_pass.h  sampler.cpp  sampler.h  shader_module.cpp  shader_module.h  (+4 more)
framework/graphing/: graph.h  graph_node.cpp  graph_node.h
framework/platform/: application.cpp  application.h  configuration.cpp  configuration.h  filesystem.cpp  filesystem.h  glfw_window.cpp  glfw_window.h  input_events.cpp  input_events.h  parser.cpp  parser.h  platform.cpp  platform.h  window.cpp  window.h  windows_platform.cpp  windows_platform.h
framework/platform/parsers/: CLI11.cpp  CLI11.h  help_formatter.cpp  help_formatter.h
framework/platform/plugins/: plugin.cpp  plugin.h  plugin_base.h
framework/rendering/: pipeline_state.cpp  pipeline_state.h  render_context.cpp  render_context.h  render_frame.cpp  render_frame.h  render_pipeline.cpp  render_pipeline.h  render_target.cpp  render_target.h  subpass.cpp  subpass.h
framework/rendering/subpasses/: forward_subpass.cpp  forward_subpass.h  geometry_subpass.cpp  geometry_subpass.h
framework/scene_graph/: component.cpp  component.h  node.cpp  node.h  scene.cpp  scene.h  script.cpp  script.h
framework/scene_graph/components/: aabb.cpp  aabb.h  astc.cpp  astc.h  camera.cpp  camera.h  image.cpp  image.h  ktx.cpp  ktx.h  light.cpp  light.h  material.cpp  material.h  mesh.cpp  mesh.h  orthographic_camera.cpp  orthographic_camera.h  pbr_material.cpp  pbr_material.h  perspective_camera.cpp  perspective_camera.h  sampler.cpp  sampler.h  stb.cpp  stb.h  sub_mesh.cpp  sub_mesh.h  texture.cpp  texture.h  transform.cpp  transform.h
framework/scene_graph/scripts/: animation.cpp  animation.h  free_camera.cpp  free_camera.h  node_animation.cpp  node_animation.h
framework/stats/: frame_time_stats_provider.cpp  frame_time_stats_provider.h  stats.cpp  stats.h  stats_common.h  stats_provider.cpp  stats_provider.h  vulkan_stats_provider.cpp  vulkan_stats_provider.h
samples/: CMakeLists.txt
samples/16bit/: 16bit.cpp  16bit.h  CMakeLists.txt
samples/afbc/: CMakeLists.txt  afbc.cpp  afbc.h
samples/api/hello_triangle/: CMakeLists.txt  hello_triangle.h
samples/base/: CMakeLists.txt  base.cpp  base.h
samples/hello_triangle/: hello_triangle.cpp
samples/lighting/: CMakeLists.txt  lighting.cpp  lighting.h
shaders/: base.frag  base.vert  imgui.frag  imgui.vert  lighting.h  pbr.frag  pbr.vert
shaders/lighting/: blur_down.comp  blur_up.comp
